Fix card overflowing when shrunk

--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ html, body, .container {
 }
 
 .card {
-  height: 80px;
+  min-height: 80px;
   background-color: var(--main-color);
   display: flex;
   border-radius: var(--card-border-radius);
@@ -120,6 +120,7 @@ html, body, .container {
 .card .content {
   flex: 1;
   display: flex;
+  padding: 8px;
   flex-direction: column;
   justify-content: center;
 }
